2012-11-21 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix CS debugging regression. (tocket #154)

2012-10-28 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix a bug when using -l without -f (ticket #143).
	* Fix -f arg for "shine show info"

2012-09-17 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Add node name in error message where needed (ticket #140).
	* Release: 0.912

2012-09-06 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix ignored args (-t, -i) with 'config' command (ticket #139).

2012-09-04 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix exit code when shine cannot umount (ticket #138).
	* Avoid broken pipe error (ticket #137).

2012-08-02 Stephane Thiell  <stephane.thiell@cea.fr>
	* Add filename in lmf/xmf parse error message (ticket #135).

2012-08-02 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Add new 'config' command (ticket #67).
	* Add new 'list' command (ticket #133).
	* Add color option in shine.conf (ticket #136).

2012-08-01 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Network supports an optional '0' id (ticket #134).
	* New shine CLI display with options (ticket #105).

2012-07-26 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Nodes could be specified with -n or -w (ticket #48).
	*  -l also select filesystem when -f is missing (ticket #69).

2012-07-25 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Rewrite command line option management (ticket #35, #38)

2012-06-19 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix over-consumption of memory with fsck (ticket #131).

2012-06-05 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix 'ha_node' handling in storage.conf with backend File (ticket #129).

2012-05-25 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix exception when checking status on an evicted client (ticket #126).

2012-05-24 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix path syntax checking in ModelFile (ticket #127).
