@@ -162,6 +162,12 @@ class ActionsTest(unittest.TestCase):
         action = Fsck(tgt, addopts='-v')
         self.check_cmd(action, 'e2fsck -f -y -C2 /dev/root -v')
 
+    def test_fsck_addopts_placeholders(self):
+        """test command line fsck (addl options with placeholders)"""
+        tgt = self.fs.new_target(self.srv1, 'mgt', 0, '/dev/root')
+        action = Fsck(tgt, addopts='--ostdb /mnt/db/%label.db')
+        self.check_cmd(action, 'e2fsck -f -y -C2 /dev/root --ostdb /mnt/db/MGS.db')
+
     # XXX: All _check_status() calls should be replaced by a real call to the
     # method dedicated action for the Target.
 
