@@ -1,3 +1,6 @@
+2012-12-21 Aurelien Degremont  <aurelien.degremont@cea.fr>
+	* Special fields could be used with -o option. (ticket #153)
+
 2012-11-21 Aurelien Degremont  <aurelien.degremont@cea.fr>
 	* Fix CS debugging regression. (tocket #154)
 
